2013-02-05  Adam Barth  <abarth@webkit.org>

        DumpRenderTree should be able to enable the threaded parser
        https://bugs.webkit.org/show_bug.cgi?id=108970

        Reviewed by Eric Seidel.

        We can now enable the parser at runtime using --enable-threaded-html-parser.

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (main):
        * DumpRenderTree/chromium/TestRunner/public/WebPreferences.h:
        (WebPreferences):
        * DumpRenderTree/chromium/TestRunner/src/WebPreferences.cpp:
        (WebTestRunner::WebPreferences::reset):
        (WebTestRunner::WebPreferences::applyTo):
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):
        (TestShell::resetWebSettings):
        * DumpRenderTree/chromium/TestShell.h:
        (TestShell::setThreadedHTMLParser):
        (TestShell):

2013-02-05  Benjamin Poulain  <bpoulain@apple.com>

        Make StringBuilder::toAtomicString() consistent with StringBuilder::toString() for strings of null length
        https://bugs.webkit.org/show_bug.cgi?id=108894

        Reviewed by Andreas Kling.

        * TestWebKitAPI/Tests/WTF/StringBuilder.cpp:
        Extend the tests to check toAtomicString() on an empty builder.

2013-02-05  Jochen Eisinger  <jochen@chromium.org>

        [chromium] remove methods from the WebTestRunner interface that are only used by WebTestProxyBase
        https://bugs.webkit.org/show_bug.cgi?id=108926

        Reviewed by Adam Barth.

        * DumpRenderTree/chromium/TestRunner/public/WebTestRunner.h:
        (WebKit):
        (WebTestRunner):
        * DumpRenderTree/chromium/TestRunner/src/TestRunner.h:
        (TestRunner):

2013-02-05  Jochen Eisinger  <jochen@chromium.org>

        [chromium] remove unneccessary 0 checks for testRunner now that the TestRunner library owns it
        https://bugs.webkit.org/show_bug.cgi?id=108923

        Reviewed by Kentaro Hara.

        * DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp: