@@ -155,6 +155,7 @@ var TEST_TYPES = [
     'androidwebview_instrumentation_tests',
     'chromiumtestshell_instrumentation_tests',
     'contentshell_instrumentation_tests',
+    'cc_unittests'
 ];
 
 var RELOAD_REQUIRING_PARAMETERS = ['showAllRuns', 'group', 'testType'];
@@ -414,6 +415,8 @@ function currentBuilderGroupCategory()
     case 'chromiumtestshell_instrumentation_tests':
     case 'contentshell_instrumentation_tests':
         return CHROMIUM_INSTRUMENTATION_TESTS_BUILDER_GROUPS;
+    case 'cc_unittests':
+        return CC_UNITTEST_BUILDER_GROUPS;
     default:
         return CHROMIUM_GTESTS_BUILDER_GROUPS;
     }
