@@ -1,3 +1,15 @@
+2013-02-05  Julie Parent  <jparent@chromium.org>
+
+        Add cc_unittests to the dashboards
+        https://bugs.webkit.org/show_bug.cgi?id=108878
+
+        Reviewed by Dirk Pranke.
+
+        * TestResultServer/static-dashboards/builders.js:
+        (loadBuildersList):
+        * TestResultServer/static-dashboards/dashboard_base.js:
+        (currentBuilderGroupCategory):
+
 2013-02-05  Adam Barth  <abarth@webkit.org>
 
         DumpRenderTree should be able to enable the threaded parser
